@@ -110,10 +110,31 @@ export MB_DB_FILE=$new_db_dir/$(basename $db_file)
 chown metabase:metabase $new_db_dir $new_db_dir/* 2>/dev/null  # all that fussing makes this safe
 
 # Setup Java Options
-JAVA_OPTS="${JAVA_OPTS} -Dlogfile.path=target/log -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -server"
+JAVA_OPTS="${JAVA_OPTS} -XX:+IgnoreUnrecognizedVMOptions"
+JAVA_OPTS="${JAVA_OPTS} -Dfile.encoding=UTF-8"
+JAVA_OPTS="${JAVA_OPTS} -Dlogfile.path=target/log"
+JAVA_OPTS="${JAVA_OPTS} -server"
 
 if [ ! -z "$JAVA_TIMEZONE" ]; then
     JAVA_OPTS="${JAVA_OPTS} -Duser.timezone=${JAVA_TIMEZONE}"
+fi
+
+# Ensure JAR file is world readable
+chmod o+r /app/metabase.jar
+
+# Initialize the Metabase db from H2 dump, if available
+INITIAL_DB=$(ls /app/initial*.db 2> /dev/null | head -n 1)
+if [ -f "${INITIAL_DB}" ]; then
+    echo "Initializing Metabase database from H2 database ${INITIAL_DB}..."
+    chmod o+r ${INITIAL_DB}
+    su metabase -s /bin/sh -c "exec java $JAVA_OPTS -jar /app/metabase.jar load-from-h2 ${INITIAL_DB%.mv.db} $@"
+
+    if [ $? -ne 0 ]; then
+        echo "Failed to initialize database from H2 database!"
+        exit 1
+    fi
+
+    echo "Done."
 fi
 
 # Launch the application
